# rumpus

./: .gitignore  Cargo.toml  README.md  result.csv  scores.csv
.github/ISSUE_TEMPLATE/: feature_request.md  refactor.md
.github/workflows/: rust.yml
assets/gp/: accumulator_plot.gp  aop_heatmap.gp
assets/json/: params.json  params_250815.json  sun_centered.json
examples/: camera.rs  estimate.rs  frd_to_enu.rs  image.rs  pattern_match.rs  simulate.rs
scripts/: printable.sh
src/: .lib.rs.swp  camera.rs  error.rs  estimator.rs  filter.rs  image.rs  iter.rs  lib.rs  mm.rs  model.rs  optic.rs  ray.rs  sensor.rs  simulation.rs  state.rs  utils.rs
src/estimate/: pattern_match.rs
src/estimator/: hough_transform.rs  mod.rs  pattern_match.rs
src/light/: aop.rs  dop.rs  filter.rs  mod.rs  ray.rs  stokes.rs
tests/: parse_intensity.rs  pattern_match.rs  simulation.rs
tests/snapshots/: parse_intensity__binary_intensity.snap  parse_intensity__gray_intensity.snap  simulation__aop_works.snap  simulation__aop_works.snap.new  simulation__dop_works.snap.new
