[package]
name = "rumpus"
version = "0.2.0"
edition = "2024"

[dependencies]
rayon = "1.10.0"
nalgebra = "0.33.2"
rand = "0.9"
chrono = { version="0.4.41", features=["serde"] }
spa = "0.5.1"
clap = { version="4.5", features=["derive"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand_chacha = "0.9.0"
image = { version="0.25.6", features=["rayon"] }

