[package]
name = "rumpus"
version = "0.4.0"
edition = "2024"

[dependencies]
rayon = "1.10.0"
nalgebra = "0.33.0"
rand = "0.9"
chrono = { version="0.4.41", features=["serde"] }
spa = "0.5.1"
serde = { version="1.0", features=["derive"], optional=true }
sguaba = "0.9.4"
uom = "0.37.0"

[features]
serde = ["dep:serde", "nalgebra/serde-serialize" ]

[dev-dependencies]
rand_chacha = "0.9.0"
image = { version="0.25.6", features=["rayon"] }
quickcheck = "1.0.3"
rstest = "0.26.1"
approx = "0.5.1"

