[package]
name = "rumpus"
license = "GPLv3"
description = "A framework for navigation using skylight polarization."
homepage = "https://benpot.com"
repository = "https://github.com/benjaminpotter/rumpus"
readme = "README.md"
keywords = ["skylight_polarization", "raytrace", "navigation", "image"]
version = "0.5.3"
edition = "2024"

[dependencies]
rayon = "1.10.0"
spa = "0.5.1"
sguaba = "0.9.4"
uom = "0.37.0"
thiserror = "2.0.17"
chrono = { version="0.4.41", features=["serde"] }
nalgebra = { version="0.33.0", optional=true }
serde = { version="1.0", features=["derive"], optional=true }

[dev-dependencies]
image = { version="0.25.6", features=["rayon"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rstest = "0.26.1"
approx = "0.5.1"
insta = "1.46.1"

[features]
serde = ["dep:serde", "nalgebra/serde-serialize" ]

